workshop03/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bggns
  labels:
     app: bggns
