workshop03/deploy-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  labels:
    name: bggapp-deploy
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      name: bggapp-deploy-po
  template:
    metadata:
      name: bggapp-deploy-po
      labels:
        name: bggapp-deploy-po
    spec:
      containers:
      - name: bggapp-deploy-container
        image: stackupiss/bgg-backend:v1 
        imagePullPolicy: IfNotPresent
        args:
          - --prefix
          - /v1
        ports:
         - name: dov-port
           containerPort: 3000
        # livenessProbe:
        #  httpGet:
        #    path: /healthz
        #    port: 3000
        #    scheme: HTTP
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /healthz
        #     port: 3000
