workshop03/service-app2.yml
---
#core group use v1
apiVersion: v1
kind: Service
metadata:
  name: bggapp2-svc
  labels:
    name: bggapp2-svc
spec:
  type: ClusterIP
  selector:
    name: bggapp2-deploy-po
  ports:
  - port: 80 # service port
    targetPort: dov-port # container port 3000
