workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-bear-ing
  labels:
    name: dov-bear-ing
spec:
  ingressClassName: nginx
  rules:
   - host: bgg-137.184.251.99.nip.io
     http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: bggapp-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: bggapp2-svc
            port: 
              number: 80
